Fix overlapping elements on small devices.
The smaller font size was causing overlapping due to em based positioning.

--- a/style/small-device.css
+++ b/style/small-device.css
@@ -31,8 +31,6 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 }
 
 #message {
-/*	position: absolute;*/
-	font-size: 9pt;
 }
 
 html, body {
